Inicio de sesion

--- a/proyecto/views/login.jade
+++ b/proyecto/views/login.jade
@@ -8,6 +8,10 @@ block contenido
 		div(class="form-group")
 			label(for="password") Pasword 
 			input(type="password" name="password" placeholder="consraña" id="password" class="form-control")
+		div(class="form-group")
+			label(for="p_confirmation") Pasword confirmation 
+			input(type="password" name="p_confirmation" placeholder="confirmation" id="p_confirmation" class="form-control")
+
 
 		div(class="form-group")
 			input(type="submit" value="Inisiar sesión" class="btn btn-info")
