inicio de sesion

--- a/proyecto/views/index.jade
+++ b/proyecto/views/index.jade
@@ -2,3 +2,5 @@ extends ./layout.jade
 block contenido
 	h1 Bienvenido proyecto de fotos
 	a(href="/login") Iniciar sesión
+	br
+	a(href="/sessions") Registrarse
