--- a/proyecto/views/login.jade
+++ b/proyecto/views/login.jade
@@ -1,19 +1,13 @@
 extends ./layout.jade
 block contenido
-	h1 Registrate / Inicia sesión
-	form(action="/users" method="POST")
+	h1 Inicia sesión
+	form(action="/dashboard" method="POST")
 		div(class="form-group")
 			label(for="emial") Email 
 			input(type="text" name="email" placeholder="Email" id="email" class="form-control")
 		div(class="form-group")
-			label(for="password") Pasword 
-			input(type="password" name="password" placeholder="consraña" id="password" class="form-control")
-		div(class="form-group")
-			label(for="p_confirmation") Pasword confirmation 
-			input(type="password" name="p_confirmation" placeholder="confirmation" id="p_confirmation" class="form-control")
-		div(class="form-group")
-			label(for="username") Nombre de usuario
-			input(type="password" name="username" placeholder="Usuario" id="username" class="form-control")
+			label(for="password") Password 
+			input(type="password" name="password" placeholder="contraseña" id="password" class="form-control")
 
 
 		div(class="form-group")
