--- a/proyecto/views/layout.jade
+++ b/proyecto/views/layout.jade
@@ -4,5 +4,6 @@ html(lang="es")
 		title fotosProyecto
 		meta(charset="utf-8")
 		link(href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet")
+		link(href="../public/styles.css" rel="stylesheet")
 	body
 		block contenido
