--- a/proyecto/views/app/images/new.jade
+++ b/proyecto/views/app/images/new.jade
@@ -1,8 +1,8 @@
 extends ../../layout.jade
 block contenido
-	div(class = "right-space col-md-4 remove-float center-block big-top-space image-space")
+	div(class = "right-space remove-float center-block col-md-4 big-top-space image-space")
 		h1(class="text-center") Cargar Imagen
-		form(action="/sessions" method="POST")
+		form(action="/app/images" method="POST")
 			div(class="form-group")
 				label(for="name") Nombre:
 				input(type="text" name="name" placeholder="Nombre de imagen..." id="name" class="form-control")
